Hooked up the user api key setup in the settings.

--- a/config/index.html
+++ b/config/index.html
@@ -15,13 +15,13 @@
 
     <div class='item-container'>
         <div class='item-container-header'>
-            User API Key
+            Public API Key
         </div>
         <div class='item-container-content'>
             <label class='item'>
                 <div class="item-input-wrapper">
-                        <input type="text" class="item-input" name="input-1" placeholder="Input field">
-                      </div>
+                    <input type="text" class="item-input" id="api-key-input" name="input-1" placeholder="API Key">
+                </div>
             </label>
         </div>
     </div>
