--- a/config/index.html
+++ b/config/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>WaniKani TokiDoki</title>
+    <title>wani-kani tabi-tabi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- build:css config.css -->
